# xuan-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_saas_schema.py  0002_plans_and_subscriptions.py
backend/app/: __init__.py  main.py  models.py
backend/app/agent/: runtime.py  tools.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  chat.py  files.py  jobs.py  sessions.py  usage.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: session.py
backend/app/llm/: openai_compatible_chat.py  openai_responses.py
backend/app/schemas/: auth.py  chat.py  file.py  job.py  session.py  usage.py
backend/app/services/: plans.py  usage.py  workspace.py
backend/app/tools/: __init__.py  file_tools.py  python_sandbox.py
backend/app/worker/: queue.py  tasks.py
docs/: 01-requirements.md  02-mvp-scope.md  03-product-flow.md  04-technical-architecture.md  05-task-breakdown.md  06-security-plan.md  07-saas-architecture.md  08-data-model.md  09-saas-roadmap.md  10-saas-mvp-requirements.md  11-local-runbook.md  12-doubao-integration.md  13-async-jobs-and-plans.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Chat.tsx  UsagePanel.tsx
frontend/lib/: api.ts
sandbox/: Dockerfile
